--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.27.1",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-google-recaptcha": "^2.1.5",
     "autoprefixer": "^9.8.8",
     "gh-pages": "^3.2.3",
     "postcss": "^7.0.39",
